added tests and definition for other users